# crypto-portfolio-performance-bridge

./: .gitignore  Cargo.toml  README.md  trades.csv
migrations/: 20240305182725_initial.sql  20240306090553_mexc_created_at_updated_at.sql  20240306200823_create_coinbase_source_table.sql
src/: command_line_interface.rs  data.rs  export.rs  input.rs  main.rs
src/input/: coinbase.rs  mexc.rs
src/input/mexc/: requests.rs
