[package]
name = "crypto-to-portfolio-performance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen= "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["std", "serde_derive"] }
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
clap = { version = "4.5.1", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
